add stars to collect

--- a/.edit/index.html
+++ b/.edit/index.html
@@ -452,8 +452,7 @@
 	<script src="jquery/jquery-1.11.3.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="bootstrap/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="resources/spin.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="androidscript-ace/src-min/ace.js" type="text/javascript" charset="utf-8"></script>
-    <script src="androidscript-ace/src-min/ext-language_tools.js" type="text/javascript" charset="utf-8"></script>
+    <script src="androidscript-ace/src-min/ace.js" type="text/javascript"></script>
     <script src="tabdrop/js/bootstrap-tabdrop.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="polyfill/promise.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="ide.min.js" type="text/javascript" charset="utf-8"></script>
